# guile-ncurses

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.cygwin  README.mingw  README.openbsd  THANKS  TODO  aclocal.m4  config.h.in  configure.ac
build_aux/: .gitignore  Makefile.am
doc/: ex_panel.scm  guile-ncurses.texi
m4/: .gitignore  Makefile.am  ax_check_define.m4  guile.m4
ncurses/: curs_const.c  curs_func.c  curs_func.h  curs_port.c  curs_spec.c  curs_spec.h  curses.scm  extra_func.c  extra_func.h  form.scm  form_func.c  form_spec.c  form_type.c  form_type.h  menu_func.c  menu_type.c  menu_type.h  panel.scm  panel_main.c  panel_type.c  panel_type.h  type.c  type.h
src/ncurses/: .indent.pro  Makefile.am  curs_const.c  curs_func.c  curs_func.h  curs_port.c  curs_port.h  curs_spec.c  curs_spec.h  curses.scm  eti_const.c  extra.scm  extra_const.c  extra_func.c  extra_func.h  extra_type.c  form.scm  form_const.c  form_func.c  form_func.h  form_spec.c  form_spec.h  form_type.c  form_type.h  gucuconfig.h  menu.scm  menu_const.c  menu_func.c  menu_spec.c  menu_type.c  menu_type.h  panel.scm  panel_func.c  panel_func.h  panel_spec.c  panel_spec.h  panel_type.c  panel_type.h  slk_func.c  type.c  (+4 more)
test/: Makefile.am  automake-test-lib.scm  curs_addch_acs.scm  curs_addch_ascii.scm  curs_addchstr.scm  curs_addchstr_n.scm  curs_addchstr_yx.scm  curs_addchstr_yxn.scm  curs_addstr.scm  curs_addstr_yx.scm  curs_addstr_yxn.scm  curs_attr_attr_get.scm  curs_attr_attr_off_underline.scm  curs_attr_attr_on_blink.scm  curs_attr_attr_on_bold.scm  curs_attr_attr_on_dim.scm  curs_attr_attr_on_invis.scm  curs_attr_attr_on_protect.scm  curs_attr_attr_on_reverse.scm  curs_attr_attr_on_standout.scm  curs_attr_attr_on_underline.scm  curs_attr_attr_set.scm  curs_attr_attr_set_normal.scm  curs_attr_chgat.scm  curs_attr_chgat_yx.scm  curs_attr_color_set.scm  curs_attr_standend.scm  curs_attr_standout.scm  curs_attributes.scm  curs_attributes_strings.scm  curs_beep.scm  curs_beep_flash.scm  curs_bkgd_bkgd.scm  curs_bkgd_bkgdset.scm  curs_border_border_unicode.scm  curs_border_custom.scm  curs_border_default.scm  curs_border_hline.scm  curs_border_hline_unicode.scm  curs_border_hline_yx.scm  (+248 more)
tools/: Makefile.am  gdb-test.sh  ncurses-keyboard-test  uninstalled-env.in
